# steerable-framework

./: .gitignore  .release-please-manifest.json  BRAND.py  BRAND.ts  CHANGELOG.md  INTEGRATION-TESTING.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  TODO.md  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  dco.yml  docs.yml  publish-npm.yml  publish-pypi.yml  release.yml  sidecar-build.yml  sidecar-codesign.yml  sidecar-prune-tests.yml  storybook-quality.yml  vrt-baselines.yml
docs/: getting-started.md  index.md  requirements.txt
docs/migration/: deeppath.md
docs/spec/: architecture.md  chat.md  events.md  overview.md  runtime.md  safety.md  sidecar.md  tools.md
docs/ui/: index.md
examples/py-minimal/: README.md  pyproject.toml
examples/py-minimal/src/steerable_example_py_minimal/: __init__.py  main.py
examples/sidecar-roundtrip/: README.md  pyproject.toml
examples/sidecar-roundtrip/src/steerable_example_sidecar_roundtrip/: __init__.py  main.py
examples/ts-minimal/: README.md  package.json  tsconfig.json
examples/ts-minimal/src/: main.ts
scripts/: check_drift.py  check_lockstep_versions.py  check_ts_drift.mjs  generate-vrt-baselines-linux.sh  generate_py.py  generate_ts.mjs
scripts/release/: build-local-artifacts.sh  bump_to.sh  verify-local-artifacts.sh
spec/: README.md
spec/chat/: ChatAgent.schema.json  ChatMessage.schema.json
spec/events/: SSEEvent.schema.json
spec/runtime/: AgentSession.schema.json  HarnessTrace.schema.json  README.md  TraceEvent.schema.json  TraceSpan.schema.json
spec/safety/: CommandSafetyPattern.schema.json
spec/sidecar/: README.md  SidecarError.schema.json  SidecarHealth.schema.json  SidecarNotification.schema.json  SidecarRequest.schema.json  SidecarResponse.schema.json
spec/tools/: ToolCall.schema.json  ToolResult.schema.json
tests/conformance/cases/retry/: basic.yaml
tests/conformance/py/: test_retry_conformance.py
tests/conformance/ts/: package.json  retry.test.js  retry.test.ts  tsconfig.json
