[project]
name = "steerable-framework-monorepo"
version = "0.1.0"
description = "Steerable framework monorepo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.uv.workspace]
members = [
  "packages/agent-protocol/py",
  "packages/agent-harness/py",
  "packages/agent-runtime/py",
  "packages/sidecar/py",
  "examples/py-minimal",
  "examples/sidecar-roundtrip",
]

[dependency-groups]
dev = [
  "datamodel-code-generator>=0.31.0",
  "pydantic>=2.10.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=1.3.0",
  "pyyaml>=6.0.2",
  # Workspace members — declared so `uv sync` installs them as editable
  # into the dev environment. Without these `uv sync` would leave the
  # local packages off `sys.path` and `pytest` collection would fail
  # with `ModuleNotFoundError: No module named 'steerable_*'`.
  # `[tool.uv.sources]` below maps each name to its workspace path.
  "steerable-agent-protocol",
  "steerable-agent-harness",
  "steerable-agent-runtime",
  "steerable-sidecar",
]

[tool.uv.sources]
steerable-agent-protocol = { workspace = true }
steerable-agent-harness = { workspace = true }
steerable-agent-runtime = { workspace = true }
steerable-sidecar = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = [
  "packages/agent-protocol/py/tests",
  "packages/agent-harness/py/tests",
  "packages/agent-runtime/py/tests",
  "packages/sidecar/py/tests",
  "tests/conformance/py",
]
