[project]
name = "steerable-example-sidecar-roundtrip"
version = "0.0.0"
description = "Spawn the steerable-sidecar binary and complete a JSON-RPC roundtrip."
requires-python = ">=3.10"
dependencies = [
  "steerable-sidecar",
]

[tool.uv.sources]
steerable-sidecar = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/steerable_example_sidecar_roundtrip"]
